static/style.css
body {
    font-family: Arial, sans-serif;
    direction: rtl;
    text-align: right;
}

.container {
    max-width: 600px;
    margin: 0 auto;
    padding: 20px;
    border: 1px solid #ccc;
    border-radius: 10px;
}

h1 {
    text-align: center;
}

form {
    margin-bottom: 20px;
}

.form-group {
    margin-bottom: 15px;
}

.form-group-group {
    display: flex;
    justify-content: space-between;
}

#form-group-adult {
    margin-left: 5px;
}

#form-group-children {
    margin-right: 5px;
}

label {
    display: block;
    margin-bottom: 5px;
}

input[type="number"],
select {
    width: 100%;
    padding: 10px;
    box-sizing: border-box;
    margin-bottom: 10px;
}

button {
    padding: 10px 20px;
    background-color: #007BFF;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin: 0 auto;
    display: block;
    text-align: center;
}

button:hover {
    background-color: #0056b3;
}

#results {
    margin-top: 20px;
}

#totalMeat {
    margin-top: 20px;
    font-weight: bold;
}

input[type="range"] {
    width: 100%;
    margin-top: 10px;
}

#copyButton {
    margin-top: 10px;
}

#copyMessage {
    margin-top: 5px;
    color: green; /* Change color to your preference */
}

#copyContainer {
    margin-top: 10px;
}

#copyContainer button {
    padding: 10px 20px;
    background-color: #007BFF; /* Default color, change as needed */
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

#copyContainer button:hover {
    background-color: #0056b3; /* Darker shade on hover */
}

footer {
    color: #333; /* Dark grey text color for contrast */
    padding: 20px 0; /* Top and bottom padding */
    text-align: center; /* Center-align the text */
    font-size: 0.8rem; /* Slightly smaller font size for a professional look */
    font-family: Arial, sans-serif; /* Professional font family */
}

footer a {
    color: #007bff; /* Change the link color */
    text-decoration: none; /* Remove underline */
    font-weight: bold; /* Make it bold */
}

footer a:hover {
    color: #0056b3; /* Darker shade on hover for contrast */
    text-decoration: underline; /* Add underline on hover for emphasis */
}

.icon-button {
    background: none;
    border: none;
    cursor: pointer;
    font-size: 24px; /* Adjust size as needed */
    margin: 0 5px; /* Adjust spacing as needed */
    color: #333; /* Adjust color as needed */
    padding: 0;
    outline: none;
    box-shadow: none;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.icon-button i {
    pointer-events: none; /* Ensure the icon is not the clickable part, the button is */
}

.icon-button:hover {
    color: #007bff; /* Adjust hover color as needed */
}

